SERVER-24165 Validate should report records with invalid BSON