src/mongo/db/commands/validate.cpp
@@ -204,6 +204,13 @@ public:
         result.append("extraIndexEntries", validateResults.extraIndexEntries);
         result.append("missingIndexEntries", validateResults.missingIndexEntries);
 
+        // Need to convert RecordId to int64_t to append to BSONObjBuilder
+        BSONArrayBuilder builder;
+        for (RecordId corruptRecord : validateResults.corruptRecords) {
+            builder.append(corruptRecord.repr());
+        }
+        result.append("corruptRecords", builder.done());
+
         if (!validateResults.valid) {
             result.append("advice",
                           "A corrupt namespace has been detected. See "
